--- a/pages/services/indexServices.css
+++ b/pages/services/indexServices.css
@@ -66,7 +66,7 @@ body{
     padding-top: 54px;
 }
 .services__shelled{
-    background-image: url(../../assets/background.jpg); 
+    background-image: url(assets/background.jpg); 
     background-attachment: fixed; 
     background-size: cover;
 }
